Added Reviewer Notes

--- a/jpmcrypto.ipynb
+++ b/jpmcrypto.ipynb
@@ -15,14 +15,32 @@
     }
    ],
    "source": [
-    "# requruiments\n",
+    "# requirements\n",
     "\n",
     "!pip install requests\n",
     "!pip install time\n",
     "!pip install pandas\n",
     "!pip install numpy\n",
     "!pip install matplotlib.pyplot\n",
-    "!pip install schedule"
+    "!pip install schedule\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "773f2112",
+   "metadata": {},
+   "source": [
+    "# For Reviewers:\n",
+    "The purpose of our tutorial is to show how to make data-informed investment decisions through visualizing and analyzing past trends in cryptocurrencies and index fund(s). Our target users are beginner investors who are interested in crypto markets but have limited coding experience. We assume that the user will have a basic understanding of Python but limited exposure to data science. Our tutorial will address user needs like having accessibility of financial data analysis and practical decision making tools. Beginners will struggle to gather, clean, and visualize data so we will be providing step-by-step instructions for doing so. Also through seeing risk and reward tradeoffs and making a predictive AI model, users will gain skills in comparing assets and products and be able to experiment with financial strategies like holding and buying. Our tutorial will focus on data based coding while ensuring that users learn the concepts of financial data analysis and the workflows necessary to implement and visualize them.\n",
+    "\n",
+    "The priorties for things to review at the high level would be our graphs. Our priorities is to make the graph(s) as clear as possible and the data cleaning step. We are also not sure if the numpy and pandas methods that we use are too advanced for our target audience.\n",
+    "\n",
+    "Whats Done: We implemented getting the cryptocurrency data from an API, cleaning the data, calculaing the risk/reward from that data, graphing the data, and scheduling it so that the pipeline runs everyday at 9 am.\n",
+    "\n",
+    "Whats missing/left to do is that we wanted to add an interactive element to the graph so that you can over specific dates on the graph and be able to see that days closing price/violatility. Additionally we still need write the call for an OpenAI LLM to give advice based on the prices/violatility. Finally, we still need to change the code so that multiple/different coins can be used instead of just bitcoin.\n",
+    "\n",
+    "Additional Notes: All of the requirement libraries are listed above. For the scheduling code, you can change 09:00 to next closest minute in order to test that segment of code. \n",
+    "\n"
    ]
   },
   {
@@ -391,15 +409,15 @@
     "    btc_volatility = volatility(btc_daily[\"Close\"])\n",
     "    plot_combined_graph(btc_daily, btc_volatility)\n",
     "\n",
-    "schedule_graph()\n",
+    "# schedule_graph()\n",
     "    \n",
     "\n",
-    "# schedule.every().day.at(\"22:39\").do(schedule_graph)\n",
-    "# print(\"Scheduler started. Will fetch and graph data every day at 09:00.\")\n",
+    "schedule.every().day.at(\"09:00\").do(schedule_graph)\n",
+    "print(\"Scheduler started. Will fetch and graph data every day at 09:00.\")\n",
     "\n",
-    "# while True:\n",
-    "#     schedule.run_pending()\n",
-    "#     time.sleep(60)"
+    "while True:\n",
+    "    schedule.run_pending()\n",
+    "    time.sleep(60)"
    ]
   }
  ],
