polished tutorial steps 6-9

--- a/jpmcrypto.ipynb
+++ b/jpmcrypto.ipynb
@@ -3300,11 +3300,14 @@
    "source": [
     "# Step 6 - Analyzing Risk/Return of a Coin\n",
     "\n",
-    "Looking at the risk/return ration of a coin helps us make a more informed buy decision.\n",
     "\n",
-    "Our risk/return function uses the Sharpe Ratio, which is a widely-accepted formula for evaluating the risk of buying a cryptocurrency. The function takes in an array of prices and a risk-free return value. The risk free-rate (rf) is the percentage return you can earn by investing in a Treasury Bill instead of bitcoin. As of November 16, 2025, the rf is 3.89%. You can find this value by going to the US department of treasury website.\n",
+    "Looking at the risk/return ratio of a coin helps us make a more informed buying decision.\n",
     "\n",
-    "In our function body, we first calculate the daily returns and store these values in an array called returns. With that, we can calculate the risk by taking the standard deviation of the returns array and calculate the reward by taking the mean of the returns array. The final risk/reward ratio is calculated by subtracting the risk-free rate from the reward, then dividing that value by the risk."
+    "\n",
+    "Our risk/return function uses the Sharpe Ratio, which is a widely-accepted formula for evaluating the risk of buying a cryptocurrency. The function takes in an array of prices and a risk-free return value. The risk free-rate (rf) is the percentage return you can earn by investing in a Treasury Bill instead of the cryptocurrency being analyzed. As of November 16, 2025, the rf is 3.89%. You can find this value by going to the US department of treasury website.\n",
+    "\n",
+    "\n",
+    "In our function body, we first calculate the daily returns and store these values in an array called returns. With that, we can calculate the risk by taking the standard deviation of the returns array and calculate the reward by taking the mean of the returns array. The final risk/reward ratio is calculated by subtracting the risk-free rate from the reward, then dividing that value by the risk.\n"
    ]
   },
   {
@@ -3374,7 +3377,7 @@
    "id": "acdf474f",
    "metadata": {},
    "source": [
-    "A negative risk/reward value indicates this investment should be avoided because it is very risky and has low reward potential. Risk/reward ratios in the 0.0-0.99 range indicate a safe investment. Most investments fall in the 1.0-1.99 range and these offer a balance between risk and reward. A ratio above 2 suggests use of leverage to inflate returns, which also increases the risk. Thus, we encourage investors to conduct further research on such investments."
+    "A negative risk/reward value indicates this investment should be avoided because it is very risky and has low reward potential. Risk/reward ratios in the 0.0-0.99 range indicate a safe investment. Most investments fall in the 1.0-1.99 range and these offer a balance between risk and reward. A ratio above 2 suggests use of leverage to inflate returns, which also increases the risk. Thus, it is encouraged that investors conduct further research on such investments.\n"
    ]
   },
   {
@@ -3384,9 +3387,10 @@
    "source": [
     "# Step 7: Volatility\n",
     "\n",
+    "\n",
     "The volatility function shows how frequently a cryptocurrency price moves. Our function takes in an array of prices as input and an integer n that represents the number of days we want to check volatility for. To calculate daily volatility, we will use a 30-day window of past prices, which means the value of n cannot exceed 60, since we have data for 90 days.\n",
     "\n",
-    "In our volatility function, we will again first calculate the returns (like we did for the risk/return function). We also calculate the average of the returns. We then create an empty array called crypto_volatility, where we will store our daily volatility values. We will create a nested for loop. Each outer loop, represents the volatility for one day. The inner loop calculates the volatility for that day using the daily price values from the past 30 days. The volatility for that day is then calculated by using the standard deviation formula. We convert the volatility to a percentage value by multiplying by 100 and make it more readable by using python's round() function. We then store the daily volatility value in our crypto_volatility array."
+    "In our volatility function, we will again first calculate the returns (like we did for the risk/return function). We also calculate the average of the returns. We then create an empty array called crypto_volatility, where we will store our daily volatility values. We will create a nested for loop. Each outer loop iteration represents the volatility for one day. The inner loop calculates the volatility for that day using the daily price values from the past 30 days. The volatility for that day is then calculated by using the standard deviation formula. We convert the volatility to a percentage value by multiplying by 100 and make it more readable by using python's round() function. We then store the daily volatility value in our crypto_volatility array.\n"
    ]
   },
   {
@@ -3475,6 +3479,17 @@
    "source": [
     "avg_volatility = np.round(np.mean(btc_volatility), 2)\n",
     "print(f'Average volatility over 60 days: {avg_volatility}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de17844e",
+   "metadata": {},
+   "source": [
+    "# Step 8: Plotting Volatility\n",
+    "\n",
+    "\n",
+    "Next, we will use Plotly to plot bitcoin's volatility in the past 60 days. The x-axis represents dates and the y-axis represents volatility (in percentage). The graph takes advantage of Plotly's hover functionality to allow users to see specific volatility values for specific dates.\n"
    ]
   },
   {
@@ -4481,6 +4496,14 @@
     "\n",
     "fig.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8482734b",
+   "metadata": {},
+   "source": [
+    "We can make multiple plots in the same graph to compare the volatilities of different cryptocurrencies.\n"
    ]
   },
   {
@@ -5728,10 +5751,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a810aa",
+   "id": "2bde6425",
    "metadata": {},
    "source": [
-    "The graph above shows the correlation between daily bitcoin price and volatility. We notice that as the price trend reverses, the volatility increases."
+    "When investing in cryptocurrency, it is important to have a diverse portfolio to minimize risk of losing everything in one investment. Here, Plotly's hover functionality is particularly useful as it gives us information we can use to decide how much to allocate to each cryptocurrency. Advanced traders can profit off of high volatility but for beginners, it is best to allocate most of one's portfolio to cryptocurrencies with lower volatility.\n"
    ]
   },
   {
@@ -5739,7 +5762,10 @@
    "id": "bff02490",
    "metadata": {},
    "source": [
-    "# Step 8: Buy or Sell Quiz"
+    "# Step 9: Buy or Sell Quiz\n",
+    "\n",
+    "\n",
+    "Mock trades are a good way to practice making buy/sell decisions and learn how to swing trade, which are trades that profit off of short-medium term investments that last a few days to a few weeks. In our game, the user is given a specific day to either buy or sell a cryptocurrency. The goal is to use the tools we've given you: a price chart, risk/return, and volatility, to make the buy/sell decision.\n"
    ]
   },
   {
