Fixed some typos

--- a/jpmcrypto.ipynb
+++ b/jpmcrypto.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Section: Calling CoinGecko's API\n",
     "\n",
-    "An Application Programming Interface (API) is basically a set of rules of how other people can interact with a service. In this tutorial, we can going to request historial data on different cryptocurrineces using Python's request library. \n"
+    "An Application Programming Interface (API) is basically a set of rules of how other people can interact with a service. In this tutorial, we are going to request historial data on different cryptocurrineces using Python's request library. \n"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "\n",
     "<img src=\"api_param_img.png\" alt=\"title\" width=\"50%\">\n",
     "\n",
-    "For the currency, we can use the example that they give us and input the it as USD. The documentation states that the date ranges can be a UNIX timestamp. We want the most recent 3 months of data. To get the most recent 3 months as a UNIX timestamp we can use the time python library. time.time() returns the current time as a UNIX timestamp. Then we can calculate the number of seconds in 3 months (90 * 24 * 60 * 60) and subtract that from the current time to get the UNIX timestamp of 3 months ago from right now\n",
+    "For the currency, we can use the example that they give us and input it as USD. The documentation states that the date ranges can be a UNIX timestamp. We want the most recent 3 months of data. To get the most recent 3 months as a UNIX timestamp we can use the time python library. time.time() returns the current time as a UNIX timestamp. Then we can calculate the number of seconds in 3 months (90 * 24 * 60 * 60) and subtract that from the current time to get the UNIX timestamp of 3 months ago from right now\n",
     "\n"
    ]
   },
@@ -4436,16 +4436,6 @@
     "\n",
     "btc_volatility = volatility(btc_opening_prices, number_of_days, 30)\n",
     "\n",
-    "\n",
-    "\n",
-    "# btc_data = daily_data[\"bitcoin\"]\n",
-    "\n",
-    "# # print(btc_data)\n",
-    "\n",
-    "# dates = btc_data.index.to_list()\n",
-    "\n",
-    "\n",
-    "\n",
     "fig = go.Figure()\n",
     "\n",
     "fig.add_trace(\n",
@@ -4470,7 +4460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 99,
    "id": "92a8ccdc",
    "metadata": {},
    "outputs": [
@@ -5658,7 +5648,7 @@
          }
         },
         "title": {
-         "text": "Daily Volalitiy for Multiple Cryptocurrencies"
+         "text": "Daily Volatility for Multiple Cryptocurrencies"
         },
         "xaxis": {
          "title": {
@@ -5667,7 +5657,7 @@
         },
         "yaxis": {
          "title": {
-          "text": "Volalitiy"
+          "text": "Volatility"
          }
         }
        }
@@ -5702,9 +5692,9 @@
     "    )\n",
     "\n",
     "fig.update_layout(\n",
-    "    title=\"Daily Volalitiy for Multiple Cryptocurrencies\",\n",
+    "    title=\"Daily Volatility for Multiple Cryptocurrencies\",\n",
     "    xaxis_title=\"Date\",\n",
-    "    yaxis_title=\"Volalitiy\",\n",
+    "    yaxis_title=\"Volatility\",\n",
     "    hovermode=\"x unified\"\n",
     ")\n",
     "\n",
