add debugging for some errors that I encountered

--- a/jpmcrypto.ipynb
+++ b/jpmcrypto.ipynb
@@ -86,6 +86,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88d99dd3",
+   "metadata": {},
+   "source": [
+    "# Possible Error\n",
+    "\n",
+    "Because we are using CoinGecko's API without making an account or paying for the premium version, CoinGecko limits the number of times we can call the API. The free non account limit is about 5 to 15 calls per minute. So if you ever get the error: \"You've exceeded the Rate Limit\", just try calling the API at a later time. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ecbfacdd",
    "metadata": {},
    "source": [
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "bb85ec00",
    "metadata": {},
    "outputs": [
@@ -245,6 +255,16 @@
    "source": [
     "sample = fetch_data(\"bitcoin\")\n",
     "print(sample.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eec53a60",
+   "metadata": {},
+   "source": [
+    "# Possible Error \n",
+    "\n",
+    "When running the code chunk above, you might see the error \"dict_keys(['status'])\" instead of \"dict_keys(['prices', 'market_caps', 'total_volumes']).\" This is caused by the data from the CoinGecko API not loading correctly. To fix this issue, rerun Step 3 - Multiple Coins before try to run the code sample above again. "
    ]
   },
   {
